examples/org.eclipse.sphinx.examples.xtext.hummingbird.web/src-js/org/eclipse/sphinx/examples/xtext/hummingbird/web/parser/HummingbirdParser.js
// $ANTLR 3.3 avr. 19, 2016 01:13:22 D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g 2021-01-12 14:06:58



var HummingbirdParser = function(input, state) {
    if (!state) {
        state = new org.antlr.runtime.RecognizerSharedState();
    }

    (function(){
    }).call(this);

    HummingbirdParser.superclass.constructor.call(this, input, state);


         

    /* @todo only create adaptor if output=AST */
    this.adaptor = new org.antlr.runtime.tree.CommonTreeAdaptor();

};

org.antlr.lang.augmentObject(HummingbirdParser, {
    EOF: -1,
    T__9: 9,
    T__10: 10,
    T__11: 11,
    T__12: 12,
    T__13: 13,
    T__14: 14,
    T__15: 15,
    T__16: 16,
    T__17: 17,
    T__18: 18,
    T__19: 19,
    T__20: 20,
    T__21: 21,
    T__22: 22,
    T__23: 23,
    T__24: 24,
    T__25: 25,
    T__26: 26,
    T__27: 27,
    T__28: 28,
    T__29: 29,
    T__30: 30,
    T__31: 31,
    T__32: 32,
    T__33: 33,
    T__34: 34,
    T__35: 35,
    T__36: 36,
    T__37: 37,
    T__38: 38,
    T__39: 39,
    T__40: 40,
    T__41: 41,
    T__42: 42,
    T__43: 43,
    T__44: 44,
    T__45: 45,
    T__46: 46,
    ID: 4,
    STRING: 5,
    INT: 6,
    COMMENT: 7,
    WS: 8
});

(function(){
// public class variables
var EOF= -1,
    T__9= 9,
    T__10= 10,
    T__11= 11,
    T__12= 12,
    T__13= 13,
    T__14= 14,
    T__15= 15,
    T__16= 16,
    T__17= 17,
    T__18= 18,
    T__19= 19,
    T__20= 20,
    T__21= 21,
    T__22= 22,
    T__23= 23,
    T__24= 24,
    T__25= 25,
    T__26= 26,
    T__27= 27,
    T__28= 28,
    T__29= 29,
    T__30= 30,
    T__31= 31,
    T__32= 32,
    T__33= 33,
    T__34= 34,
    T__35= 35,
    T__36= 36,
    T__37= 37,
    T__38= 38,
    T__39= 39,
    T__40= 40,
    T__41= 41,
    T__42= 42,
    T__43= 43,
    T__44= 44,
    T__45= 45,
    T__46= 46,
    ID= 4,
    STRING= 5,
    INT= 6,
    COMMENT= 7,
    WS= 8;

// public instance methods/vars
org.antlr.lang.extend(HummingbirdParser, org.antlr.runtime.Parser, {
        
    setTreeAdaptor: function(adaptor) {
        this.adaptor = adaptor;
    },
    getTreeAdaptor: function() {
        return this.adaptor;
    },

    getTokenNames: function() { return HummingbirdParser.tokenNames; },
    getGrammarFileName: function() { return "D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g"; }
});
org.antlr.lang.augmentObject(HummingbirdParser.prototype, {

    // inline static return class
    rule_EntryPoint_return: (function() {
        HummingbirdParser.rule_EntryPoint_return = function(){};
        org.antlr.lang.extend(HummingbirdParser.rule_EntryPoint_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:21:1: rule_EntryPoint : ( rule_Application | rule_Platform EOF );
    // $ANTLR start "rule_EntryPoint"
    rule_EntryPoint: function() {
        var retval = new HummingbirdParser.rule_EntryPoint_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var EOF3 = null;
         var rule_Application1 = null;
         var rule_Platform2 = null;

        var EOF3_tree=null;

        try {
            // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:21:16: ( rule_Application | rule_Platform EOF )
            var alt1=2;
            var LA1_0 = this.input.LA(1);

            if ( (LA1_0==9) ) {
                alt1=1;
            }
            else if ( (LA1_0==25) ) {
                alt1=2;
            }
            else {
                var nvae =
                    new org.antlr.runtime.NoViableAltException("", 1, 0, this.input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:22:2: rule_Application
                    root_0 = this.adaptor.nil();

                    this.pushFollow(HummingbirdParser.FOLLOW_rule_Application_in_rule_EntryPoint61);
                    rule_Application1=this.rule_Application();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Application1.getTree());


                    break;
                case 2 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:22:21: rule_Platform EOF
                    root_0 = this.adaptor.nil();

                    this.pushFollow(HummingbirdParser.FOLLOW_rule_Platform_in_rule_EntryPoint65);
                    rule_Platform2=this.rule_Platform();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, rule_Platform2.getTree());
                    EOF3=this.match(this.input,EOF,HummingbirdParser.FOLLOW_EOF_in_rule_EntryPoint68); 


                    break;

            }
            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    rule_Application_return: (function() {
        HummingbirdParser.rule_Application_return = function(){};
        org.antlr.lang.extend(HummingbirdParser.rule_Application_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:29:1: rule_Application : 'Application' name= ID '{' ( 'description' description= rule_Description )? 'components' '{' components+= rule_Component ( ',' components+= rule_Component )* '}' '}' ;
    // $ANTLR start "rule_Application"
    rule_Application: function() {
        var retval = new HummingbirdParser.rule_Application_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var name = null;
        var string_literal4 = null;
        var char_literal5 = null;
        var string_literal6 = null;
        var string_literal7 = null;
        var char_literal8 = null;
        var char_literal9 = null;
        var char_literal10 = null;
        var char_literal11 = null;
        var list_components=null;
         var description = null;
        var components = null;
        var name_tree=null;
        var string_literal4_tree=null;
        var char_literal5_tree=null;
        var string_literal6_tree=null;
        var string_literal7_tree=null;
        var char_literal8_tree=null;
        var char_literal9_tree=null;
        var char_literal10_tree=null;
        var char_literal11_tree=null;

        try {
            // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:29:18: ( 'Application' name= ID '{' ( 'description' description= rule_Description )? 'components' '{' components+= rule_Component ( ',' components+= rule_Component )* '}' '}' )
            // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:30:2: 'Application' name= ID '{' ( 'description' description= rule_Description )? 'components' '{' components+= rule_Component ( ',' components+= rule_Component )* '}' '}'
            root_0 = this.adaptor.nil();

            string_literal4=this.match(this.input,9,HummingbirdParser.FOLLOW_9_in_rule_Application82); 
            string_literal4_tree = this.adaptor.create(string_literal4);
            this.adaptor.addChild(root_0, string_literal4_tree);

            name=this.match(this.input,ID,HummingbirdParser.FOLLOW_ID_in_rule_Application87); 
            name_tree = this.adaptor.create(name);
            this.adaptor.addChild(root_0, name_tree);

            char_literal5=this.match(this.input,10,HummingbirdParser.FOLLOW_10_in_rule_Application90); 
            char_literal5_tree = this.adaptor.create(char_literal5);
            this.adaptor.addChild(root_0, char_literal5_tree);

            // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:33:3: ( 'description' description= rule_Description )?
            var alt2=2;
            var LA2_0 = this.input.LA(1);

            if ( (LA2_0==11) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:33:4: 'description' description= rule_Description
                    string_literal6=this.match(this.input,11,HummingbirdParser.FOLLOW_11_in_rule_Application95); 
                    string_literal6_tree = this.adaptor.create(string_literal6);
                    this.adaptor.addChild(root_0, string_literal6_tree);

                    this.pushFollow(HummingbirdParser.FOLLOW_rule_Description_in_rule_Application99);
                    description=this.rule_Description();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, description.getTree());


                    break;

            }

            string_literal7=this.match(this.input,12,HummingbirdParser.FOLLOW_12_in_rule_Application105); 
            string_literal7_tree = this.adaptor.create(string_literal7);
            this.adaptor.addChild(root_0, string_literal7_tree);

            char_literal8=this.match(this.input,10,HummingbirdParser.FOLLOW_10_in_rule_Application107); 
            char_literal8_tree = this.adaptor.create(char_literal8);
            this.adaptor.addChild(root_0, char_literal8_tree);

            this.pushFollow(HummingbirdParser.FOLLOW_rule_Component_in_rule_Application111);
            components=this.rule_Component();

            this.state._fsp--;

            this.adaptor.addChild(root_0, components.getTree());
            if (org.antlr.lang.isNull(list_components)) list_components = [];
            list_components.push(components.getTree());

            // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:34:47: ( ',' components+= rule_Component )*
            loop3:
            do {
                var alt3=2;
                var LA3_0 = this.input.LA(1);

                if ( (LA3_0==13) ) {
                    alt3=1;
                }


                switch (alt3) {
                case 1 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:34:49: ',' components+= rule_Component
                    char_literal9=this.match(this.input,13,HummingbirdParser.FOLLOW_13_in_rule_Application115); 
                    char_literal9_tree = this.adaptor.create(char_literal9);
                    this.adaptor.addChild(root_0, char_literal9_tree);

                    this.pushFollow(HummingbirdParser.FOLLOW_rule_Component_in_rule_Application119);
                    components=this.rule_Component();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, components.getTree());
                    if (org.antlr.lang.isNull(list_components)) list_components = [];
                    list_components.push(components.getTree());



                    break;

                default :
                    break loop3;
                }
            } while (true);

            char_literal10=this.match(this.input,14,HummingbirdParser.FOLLOW_14_in_rule_Application123); 
            char_literal10_tree = this.adaptor.create(char_literal10);
            this.adaptor.addChild(root_0, char_literal10_tree);

            char_literal11=this.match(this.input,14,HummingbirdParser.FOLLOW_14_in_rule_Application129); 
            char_literal11_tree = this.adaptor.create(char_literal11);
            this.adaptor.addChild(root_0, char_literal11_tree);




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    rule_Component_return: (function() {
        HummingbirdParser.rule_Component_return = function(){};
        org.antlr.lang.extend(HummingbirdParser.rule_Component_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

    // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:40:1: rule_Component : 'Component' name= ID '{' ( 'type' type= ID )? ( 'incomingConnections' incomingconnections= ID )? ( 'description' description= rule_Description )? ( 'outgoingConnections' '{' outgoingconnections+= rule_Connection ( ',' outgoingconnections+= rule_Connection )* '}' )? ( 'parameterValues' '{' parametervalues+= rule_ParameterValue ( ',' parametervalues+= rule_ParameterValue )* '}' )? '}' ;
    // $ANTLR start "rule_Component"
    rule_Component: function() {
        var retval = new HummingbirdParser.rule_Component_return();
        retval.start = this.input.LT(1);

        var root_0 = null;

        var name = null;
        var type = null;
        var incomingconnections = null;
        var string_literal12 = null;
        var char_literal13 = null;
        var string_literal14 = null;
        var string_literal15 = null;
        var string_literal16 = null;
        var string_literal17 = null;
        var char_literal18 = null;
        var char_literal19 = null;
        var char_literal20 = null;
        var string_literal21 = null;
        var char_literal22 = null;
        var char_literal23 = null;
        var char_literal24 = null;
        var char_literal25 = null;
        var list_outgoingconnections=null;
        var list_parametervalues=null;
         var description = null;
        var outgoingconnections = null;
        var parametervalues = null;
        var name_tree=null;
        var type_tree=null;
        var incomingconnections_tree=null;
        var string_literal12_tree=null;
        var char_literal13_tree=null;
        var string_literal14_tree=null;
        var string_literal15_tree=null;
        var string_literal16_tree=null;
        var string_literal17_tree=null;
        var char_literal18_tree=null;
        var char_literal19_tree=null;
        var char_literal20_tree=null;
        var string_literal21_tree=null;
        var char_literal22_tree=null;
        var char_literal23_tree=null;
        var char_literal24_tree=null;
        var char_literal25_tree=null;

        try {
            // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:40:16: ( 'Component' name= ID '{' ( 'type' type= ID )? ( 'incomingConnections' incomingconnections= ID )? ( 'description' description= rule_Description )? ( 'outgoingConnections' '{' outgoingconnections+= rule_Connection ( ',' outgoingconnections+= rule_Connection )* '}' )? ( 'parameterValues' '{' parametervalues+= rule_ParameterValue ( ',' parametervalues+= rule_ParameterValue )* '}' )? '}' )
            // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:41:2: 'Component' name= ID '{' ( 'type' type= ID )? ( 'incomingConnections' incomingconnections= ID )? ( 'description' description= rule_Description )? ( 'outgoingConnections' '{' outgoingconnections+= rule_Connection ( ',' outgoingconnections+= rule_Connection )* '}' )? ( 'parameterValues' '{' parametervalues+= rule_ParameterValue ( ',' parametervalues+= rule_ParameterValue )* '}' )? '}'
            root_0 = this.adaptor.nil();

            string_literal12=this.match(this.input,15,HummingbirdParser.FOLLOW_15_in_rule_Component141); 
            string_literal12_tree = this.adaptor.create(string_literal12);
            this.adaptor.addChild(root_0, string_literal12_tree);

            name=this.match(this.input,ID,HummingbirdParser.FOLLOW_ID_in_rule_Component146); 
            name_tree = this.adaptor.create(name);
            this.adaptor.addChild(root_0, name_tree);

            char_literal13=this.match(this.input,10,HummingbirdParser.FOLLOW_10_in_rule_Component149); 
            char_literal13_tree = this.adaptor.create(char_literal13);
            this.adaptor.addChild(root_0, char_literal13_tree);

            // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:44:3: ( 'type' type= ID )?
            var alt4=2;
            var LA4_0 = this.input.LA(1);

            if ( (LA4_0==16) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:44:4: 'type' type= ID
                    string_literal14=this.match(this.input,16,HummingbirdParser.FOLLOW_16_in_rule_Component154); 
                    string_literal14_tree = this.adaptor.create(string_literal14);
                    this.adaptor.addChild(root_0, string_literal14_tree);

                    type=this.match(this.input,ID,HummingbirdParser.FOLLOW_ID_in_rule_Component158); 
                    type_tree = this.adaptor.create(type);
                    this.adaptor.addChild(root_0, type_tree);



                    break;

            }

            // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:45:3: ( 'incomingConnections' incomingconnections= ID )?
            var alt5=2;
            var LA5_0 = this.input.LA(1);

            if ( (LA5_0==17) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:45:4: 'incomingConnections' incomingconnections= ID
                    string_literal15=this.match(this.input,17,HummingbirdParser.FOLLOW_17_in_rule_Component165); 
                    string_literal15_tree = this.adaptor.create(string_literal15);
                    this.adaptor.addChild(root_0, string_literal15_tree);

                    incomingconnections=this.match(this.input,ID,HummingbirdParser.FOLLOW_ID_in_rule_Component169); 
                    incomingconnections_tree = this.adaptor.create(incomingconnections);
                    this.adaptor.addChild(root_0, incomingconnections_tree);



                    break;

            }

            // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:46:3: ( 'description' description= rule_Description )?
            var alt6=2;
            var LA6_0 = this.input.LA(1);

            if ( (LA6_0==11) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:46:4: 'description' description= rule_Description
                    string_literal16=this.match(this.input,11,HummingbirdParser.FOLLOW_11_in_rule_Component176); 
                    string_literal16_tree = this.adaptor.create(string_literal16);
                    this.adaptor.addChild(root_0, string_literal16_tree);

                    this.pushFollow(HummingbirdParser.FOLLOW_rule_Description_in_rule_Component180);
                    description=this.rule_Description();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, description.getTree());


                    break;

            }

            // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:47:3: ( 'outgoingConnections' '{' outgoingconnections+= rule_Connection ( ',' outgoingconnections+= rule_Connection )* '}' )?
            var alt8=2;
            var LA8_0 = this.input.LA(1);

            if ( (LA8_0==18) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:47:4: 'outgoingConnections' '{' outgoingconnections+= rule_Connection ( ',' outgoingconnections+= rule_Connection )* '}'
                    string_literal17=this.match(this.input,18,HummingbirdParser.FOLLOW_18_in_rule_Component187); 
                    string_literal17_tree = this.adaptor.create(string_literal17);
                    this.adaptor.addChild(root_0, string_literal17_tree);

                    char_literal18=this.match(this.input,10,HummingbirdParser.FOLLOW_10_in_rule_Component189); 
                    char_literal18_tree = this.adaptor.create(char_literal18);
                    this.adaptor.addChild(root_0, char_literal18_tree);

                    this.pushFollow(HummingbirdParser.FOLLOW_rule_Connection_in_rule_Component193);
                    outgoingconnections=this.rule_Connection();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, outgoingconnections.getTree());
                    if (org.antlr.lang.isNull(list_outgoingconnections)) list_outgoingconnections = [];
                    list_outgoingconnections.push(outgoingconnections.getTree());

                    // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:47:67: ( ',' outgoingconnections+= rule_Connection )*
                    loop7:
                    do {
                        var alt7=2;
                        var LA7_0 = this.input.LA(1);

                        if ( (LA7_0==13) ) {
                            alt7=1;
                        }


                        switch (alt7) {
                        case 1 :
                            // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:47:69: ',' outgoingconnections+= rule_Connection
                            char_literal19=this.match(this.input,13,HummingbirdParser.FOLLOW_13_in_rule_Component197); 
                            char_literal19_tree = this.adaptor.create(char_literal19);
                            this.adaptor.addChild(root_0, char_literal19_tree);

                            this.pushFollow(HummingbirdParser.FOLLOW_rule_Connection_in_rule_Component201);
                            outgoingconnections=this.rule_Connection();

                            this.state._fsp--;

                            this.adaptor.addChild(root_0, outgoingconnections.getTree());
                            if (org.antlr.lang.isNull(list_outgoingconnections)) list_outgoingconnections = [];
                            list_outgoingconnections.push(outgoingconnections.getTree());



                            break;

                        default :
                            break loop7;
                        }
                    } while (true);

                    char_literal20=this.match(this.input,14,HummingbirdParser.FOLLOW_14_in_rule_Component205); 
                    char_literal20_tree = this.adaptor.create(char_literal20);
                    this.adaptor.addChild(root_0, char_literal20_tree);



                    break;

            }

            // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:48:3: ( 'parameterValues' '{' parametervalues+= rule_ParameterValue ( ',' parametervalues+= rule_ParameterValue )* '}' )?
            var alt10=2;
            var LA10_0 = this.input.LA(1);

            if ( (LA10_0==19) ) {
                alt10=1;
            }
            switch (alt10) {
                case 1 :
                    // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:48:4: 'parameterValues' '{' parametervalues+= rule_ParameterValue ( ',' parametervalues+= rule_ParameterValue )* '}'
                    string_literal21=this.match(this.input,19,HummingbirdParser.FOLLOW_19_in_rule_Component213); 
                    string_literal21_tree = this.adaptor.create(string_literal21);
                    this.adaptor.addChild(root_0, string_literal21_tree);

                    char_literal22=this.match(this.input,10,HummingbirdParser.FOLLOW_10_in_rule_Component215); 
                    char_literal22_tree = this.adaptor.create(char_literal22);
                    this.adaptor.addChild(root_0, char_literal22_tree);

                    this.pushFollow(HummingbirdParser.FOLLOW_rule_ParameterValue_in_rule_Component219);
                    parametervalues=this.rule_ParameterValue();

                    this.state._fsp--;

                    this.adaptor.addChild(root_0, parametervalues.getTree());
                    if (org.antlr.lang.isNull(list_parametervalues)) list_parametervalues = [];
                    list_parametervalues.push(parametervalues.getTree());

                    // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:48:63: ( ',' parametervalues+= rule_ParameterValue )*
                    loop9:
                    do {
                        var alt9=2;
                        var LA9_0 = this.input.LA(1);

                        if ( (LA9_0==13) ) {
                            alt9=1;
                        }


                        switch (alt9) {
                        case 1 :
                            // D:\\git\\dslforge\\examples\\org.eclipse.sphinx.examples.xtext.hummingbird.web\\src-js\\org\\eclipse\\sphinx\\examples\\xtext\\hummingbird\\web\\parser\\Hummingbird.g:48:65: ',' parametervalues+= rule_ParameterValue
                            char_literal23=this.match(this.input,13,HummingbirdParser.FOLLOW_13_in_rule_Component223); 
                            char_literal23_tree = this.adaptor.create(char_literal23);
                            this.adaptor.addChild(root_0, char_literal23_tree);

                            this.pushFollow(HummingbirdParser.FOLLOW_rule_ParameterValue_in_rule_Component227);
                            parametervalues=this.rule_ParameterValue();

                            this.state._fsp--;

                            this.adaptor.addChild(root_0, parametervalues.getTree());
                            if (org.antlr.lang.isNull(list_parametervalues)) list_parametervalues = [];
                            list_parametervalues.push(parametervalues.getTree());



                            break;

                        default :
                            break loop9;
                        }
                    } while (true);

                    char_literal24=this.match(this.input,14,HummingbirdParser.FOLLOW_14_in_rule_Component231); 
                    char_literal24_tree = this.adaptor.create(char_literal24);
                    this.adaptor.addChild(root_0, char_literal24_tree);



                    break;

            }

            char_literal25=this.match(this.input,14,HummingbirdParser.FOLLOW_14_in_rule_Component240); 
            char_literal25_tree = this.adaptor.create(char_literal25);
            this.adaptor.addChild(root_0, char_literal25_tree);




            retval.stop = this.input.LT(-1);

            retval.tree = this.adaptor.rulePostProcessing(root_0);
            this.adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (re) {
            if (re instanceof org.antlr.runtime.RecognitionException) {
                this.reportError(re);
                this.recover(this.input,re);
                retval.tree = this.adaptor.errorNode(this.input, retval.start, this.input.LT(-1), re);
            } else {
                throw re;
            }
        }
        finally {
        }
        return retval;
    },

    // inline static return class
    rule_Connection_return: (function() {
        HummingbirdParser.rule_Connection_return = function(){};
        org.antlr.lang.extend(HummingbirdParser.rule_Connection_return,
                          org.antlr.runtime.ParserRuleReturnScope,
        {
            getTree: function() { return this.tree; }
        });
        return;
    })(),

